# Image_abnomal_detection

./: README.md
src/: CMakeLists.txt
